k8s/kubernetes-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dep-app   # Replace with your desired namespace name
  labels:
    name: dep-app
